--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-react-app",
+  "homepage": "./",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,7 +14,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.3",
+    "react-router-dom": "^7.1.5",
     "sass": "^1.83.4"
   },
   "devDependencies": {
